Showing how to properly name service package names
