# api/v1/gunk/example/v1/GetCountriesResponseOrBuilder.java
@@ -1,0 +1,43 @@
+// Generated by the protocol buffer compiler.  DO NOT EDIT!
+// source: all.proto
+
+package gunk.example.v1;
+
+public interface GetCountriesResponseOrBuilder extends
+    // @@protoc_insertion_point(interface_extends:gunk.example.v1.GetCountriesResponse)
+    com.google.protobuf.MessageLiteOrBuilder {
+
+  /**
+   * <code>map&lt;string, .gunk.example.v1.Country&gt; Countries = 1[json_name = "countries", ctype = STRING, deprecated = false, lazy = false, jstype = JS_NORMAL, weak = false];</code>
+   */
+  int getCountriesCount();
+  /**
+   * <code>map&lt;string, .gunk.example.v1.Country&gt; Countries = 1[json_name = "countries", ctype = STRING, deprecated = false, lazy = false, jstype = JS_NORMAL, weak = false];</code>
+   */
+  boolean containsCountries(
+      java.lang.String key);
+  /**
+   * Use {@link #getCountriesMap()} instead.
+   */
+  @java.lang.Deprecated
+  java.util.Map<java.lang.String, gunk.example.v1.Country>
+  getCountries();
+  /**
+   * <code>map&lt;string, .gunk.example.v1.Country&gt; Countries = 1[json_name = "countries", ctype = STRING, deprecated = false, lazy = false, jstype = JS_NORMAL, weak = false];</code>
+   */
+  java.util.Map<java.lang.String, gunk.example.v1.Country>
+  getCountriesMap();
+  /**
+   * <code>map&lt;string, .gunk.example.v1.Country&gt; Countries = 1[json_name = "countries", ctype = STRING, deprecated = false, lazy = false, jstype = JS_NORMAL, weak = false];</code>
+   */
+
+  gunk.example.v1.Country getCountriesOrDefault(
+      java.lang.String key,
+      gunk.example.v1.Country defaultValue);
+  /**
+   * <code>map&lt;string, .gunk.example.v1.Country&gt; Countries = 1[json_name = "countries", ctype = STRING, deprecated = false, lazy = false, jstype = JS_NORMAL, weak = false];</code>
+   */
+
+  gunk.example.v1.Country getCountriesOrThrow(
+      java.lang.String key);
+}
